Working Calc. can be stylized a bit more. need to add solar anim

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <h4 id="name">Calc</h4>
@@ -27,16 +29,18 @@
             <button class="numbers">0</button>
             <button class="numbers">.</button>
         </div>
-        <div class="operators">
+        <div class="mdas">
             <ul>
-                <li class="list"><button class="placeholder">C</button></li>
-                <li class="list"><button class="placeholder">/</button></li>
-                <li class="list"><button class="placeholder">X</button></li>
-                <li class="list"><button class="placeholder">+</button></li>
-                <li class="list"><button class="placeholder">-</button></li>
-                <li class="list"><button class="placeholder">=</button></li>
+                <li class="list"><button id="clear" class="operator">C</button></li>
+                <li class="list"><button id="divide" class="operator">/</button></li>
+                <li class="list"><button id="multiply" class="operator">*</button></li>
+                <li class="list"><button id="subtract" class="operator">-</button></li>
+                <li class="list"><button id="add" class="operator">+</button></li>
+                <li class="list"><button id="equals" class="operator">=</button></li>
             </ul>
         </div>
-    </div> 
+    </div>
 </body>
+<script type="text/javascript" src="script.js"></script>
+
 </html>
